[gd_scene load_steps=16 format=3 uid="uid://4pxfhj6u3mhj"]

[ext_resource type="Script" path="res://gui/summary_menu.gd" id="1_eks57"]
[ext_resource type="PackedScene" uid="uid://cfy8gj4feks7d" path="res://gui/inventory_grid.tscn" id="2_rra5b"]
[ext_resource type="Texture2D" uid="uid://mrc8xjf8hoof" path="res://home/icons/icon_quit.tres" id="4_se6p1"]
[ext_resource type="Script" path="res://base/components/inventory_component.gd" id="6_8rvgq"]
[ext_resource type="Texture2D" uid="uid://cn4ygamyj2urn" path="res://home/icons/icon_my_shop.tres" id="6_025ld"]
[ext_resource type="Script" path="res://gui/better_button.gd" id="6_bbifw"]
[ext_resource type="Texture2D" uid="uid://c7doa5ktqrtrd" path="res://items/icons/icon_chest_normal.tres" id="6_onnij"]
[ext_resource type="Script" path="res://base/inventory.gd" id="7_2ekur"]
[ext_resource type="Shortcut" uid="uid://ckhoo7yiet0sp" path="res://gui/confirm_shortcut.tres" id="8_5wi0x"]

[sub_resource type="Resource" id="Resource_ww4cj"]
script = ExtResource("7_2ekur")
items = Array[Resource("res://items/item.gd")]([])

[sub_resource type="Resource" id="Resource_k6r1i"]
script = ExtResource("7_2ekur")
items = Array[Resource("res://items/item.gd")]([])

[sub_resource type="Resource" id="Resource_3yo83"]
script = ExtResource("7_2ekur")
items = Array[Resource("res://items/item.gd")]([])

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7sv2e"]
load_path = "res://.godot/imported/gui.png-c848c9b1c924e53be63802a0b30cae91.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_nfday"]
atlas = SubResource("CompressedTexture2D_7sv2e")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrmsp"]
atlas = SubResource("CompressedTexture2D_7sv2e")
region = Rect2(160, 16, 16, 16)

[node name="SummaryMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eks57")

[node name="PocketsInventoryComponent" type="Node" parent="."]
script = ExtResource("6_8rvgq")

[node name="PortalInventoryComponent" type="Node" parent="."]
script = ExtResource("6_8rvgq")

[node name="LootInventoryComponent" type="Node" parent="."]
script = ExtResource("6_8rvgq")
inventory = SubResource("Resource_ww4cj")

[node name="LostInventoryComponent" type="Node" parent="."]
script = ExtResource("6_8rvgq")
inventory = SubResource("Resource_k6r1i")

[node name="SaleInventoryComponent" type="Node" parent="."]
script = ExtResource("6_8rvgq")
inventory = SubResource("Resource_3yo83")

[node name="StorageInventoryComponent" type="Node" parent="."]
script = ExtResource("6_8rvgq")

[node name="CounterInventoryComponent" type="Node" parent="."]
script = ExtResource("6_8rvgq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.215686)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -125.0
offset_right = 175.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="Container" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container"]
unique_name_in_owner = true
layout_mode = 2
text = "ui_summary_return"

[node name="StorageLoss" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container/StorageLoss"]
layout_mode = 2
texture = SubResource("AtlasTexture_nfday")

[node name="Label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container/StorageLoss"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoneyLoss" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container/MoneyLoss"]
layout_mode = 2
texture = SubResource("AtlasTexture_qrmsp")

[node name="Label" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container/MoneyLoss"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true

[node name="LootHeader" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container/LootHeader"]
layout_mode = 2
texture = ExtResource("6_onnij")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container/LootHeader"]
layout_mode = 2
text = "ui_gained_loot"
vertical_alignment = 2

[node name="LootText" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container"]
layout_mode = 2
bbcode_enabled = true
text = "ui_gained_loot_nothing"
fit_content = true

[node name="LootGrid" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container" node_paths=PackedStringArray("inventory") instance=ExtResource("2_rra5b")]
layout_mode = 2
selectable = false
inventory = NodePath("../../../../../../LootInventoryComponent")

[node name="LostHeader" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container/LostHeader"]
layout_mode = 2
texture = ExtResource("4_se6p1")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container/LostHeader"]
layout_mode = 2
text = "ui_lost_loot"
vertical_alignment = 2

[node name="LostText" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container"]
visible = false
layout_mode = 2
bbcode_enabled = true
text = "ui_gained_loot_nothing"
fit_content = true

[node name="LostGrid" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container" node_paths=PackedStringArray("inventory") instance=ExtResource("2_rra5b")]
layout_mode = 2
selectable = false
inventory = NodePath("../../../../../../LostInventoryComponent")

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 4

[node name="ItemNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
text = "Item Name"

[node name="ItemDescriptionLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8
bbcode_enabled = true
text = "Item Description"

[node name="Actions" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Actions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
shortcut = ExtResource("8_5wi0x")
text = "ui_summary_continue"
icon = ExtResource("6_025ld")
script = ExtResource("6_bbifw")

[connection signal="cell_highlighted" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container/LootGrid" to="." method="_on_grid_cell_highlighted"]
[connection signal="cell_highlighted" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Container/LostGrid" to="." method="_on_grid_cell_highlighted"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/Actions/ContinueButton" to="." method="_on_continue_button_focus_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Actions/ContinueButton" to="." method="_on_continue_pressed"]
